--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-fade-in": "^2.0.1",
+    "react-text-loop": "^2.3.0",
     "reactstrap": "^8.10.0"
   },
   "devDependencies": {
