--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-fade-in": "^2.0.1",
+    "react-faq-component": "^1.3.1",
     "react-text-loop": "^2.3.0",
     "reactstrap": "^8.10.0"
   },
