--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "ethers": "^5.5.1",
     "next": "11.1.2",
@@ -16,6 +17,7 @@
     "react-dom": "17.0.2",
     "react-fade-in": "^2.0.1",
     "react-faq-component": "^1.3.1",
+    "react-icons": "^4.3.1",
     "react-text-loop": "^2.3.0",
     "reactstrap": "^8.10.0"
   },
