--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "atomize": "^1.0.28",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "ethers": "^5.5.1",
@@ -19,7 +20,9 @@
     "react-faq-component": "^1.3.1",
     "react-icons": "^4.3.1",
     "react-text-loop": "^2.3.0",
-    "reactstrap": "^8.10.0"
+    "react-transition-group": "^4.4.2",
+    "reactstrap": "^8.10.0",
+    "shopify-buy": "^2.14.0"
   },
   "devDependencies": {
     "eslint": "8.1.0",
