starts fixing shopify

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.2",
     "atomize": "^1.0.28",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
