--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-fade-in": "^2.0.1",
     "react-faq-component": "^1.3.1",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-text-loop": "^2.3.0",
     "react-transition-group": "^4.4.2",
     "reactstrap": "^8.10.0",
